[package]
name = "ecip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git" }
rand = "0.8"
plotters = { version = "0.3.0", optional = true }
num = "0.4.0"

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]