[package]
name = "ecip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git" }
halo2_backend = { git = "https://github.com/privacy-scaling-explorations/halo2.git" }
halo2_common = { git = "https://github.com/privacy-scaling-explorations/halo2.git" }
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves.git" }
halo2-liam-eagen-msm = { git = "https://github.com/ssjeon-p/halo2-liam-eagen-msm.git" }
rand = "0.8"
plotters = { version = "0.3.0", optional = true }
num = "0.4.0"

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]